--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chromium",
-  "version": "1.0.2",
+  "name": "chromium-china",
+  "version": "1.0.3",
   "description": "Chromium binaries for Node.js projects",
-  "repository": "dtolstyi/node-chromium",
+  "repository": "shuangwhywhy/node-chromium",
   "main": "index.js",
   "os": [
     "darwin",
